--- a/ShopFilip/Views/Admin/AddProduct.cshtml
+++ b/ShopFilip/Views/Admin/AddProduct.cshtml
@@ -39,25 +39,25 @@
                     <h4>Rozmiary</h4>
                     <label class="container">
                         M
-                        <input class="size-container" type="checkbox" name="size" value="M">
+                        <input class="size-container" type="checkbox" name="size" value="0">
                         <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         L
-                        <input class="size-container" type="checkbox" name="size" value="L">
+                        <input class="size-container" type="checkbox" name="size" value="1">
                         <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         XL
-                        <input class="size-container" type="checkbox" name="size" value="XL">
+                        <input class="size-container" type="checkbox" name="size" value="2">
                         <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         XXL
-                        <input class="size-container" type="checkbox" name="size" value="XXL">
+                        <input class="size-container" type="checkbox" name="size" value="3">
                         <input style="display:none" min="0" type="number" name="quantity">
                         <span class="checkmark"></span>
                     </label>
@@ -65,22 +65,22 @@
                 <div class="form-group">
                     <h4>Grupa</h4>
                     <label class="container">
-                        <input type="radio" checked="checked" name="group" value="Koszule">
+                        <input type="radio" checked="checked" name="group" value="1">
                         Koszule
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
-                        <input type="radio" name="group" value="Spodnie">
+                        <input type="radio" name="group" value="0">
                         Spodnie
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
-                        <input type="radio" name="group" value="T-Shirt">
+                        <input type="radio" name="group" value="3">
                         T-Shirt
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
-                        <input type="radio" name="group" value="Kurtki">
+                        <input type="radio" name="group" value="2">
                         Kurtki
                         <span class="checkmark"></span>
                     </label>
