--- a/ShopFilip/Views/Home/MainPage.cshtml
+++ b/ShopFilip/Views/Home/MainPage.cshtml
@@ -36,16 +36,16 @@
             <div class="col-md-4" style="margin-top: 10px;">
                 <div class="card rounded">
                     <div class="card-image">
-                        <img class="img-fluid lazy-img" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="@Html.DisplayFor(modelItem => item.Photos.First().Value)" alt="[Photo]" />
+                        <img class="img-fluid lazy-img" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="@item.Photos.First().PhotoPath" alt="[Photo]" />
                     </div>
                     <div class="card-image-overlay m-auto">
                         <span class="card-detail-badge">Nowość!</span>
-                        <span class="card-detail-badge">@Html.DisplayFor(modelItem => item.Price) zł</span>
-                        <span class="card-detail-badge">@Html.DisplayFor(modelItem => item.Group)</span>
+                        <span class="card-detail-badge">@item.Price zł</span>
+                        <span class="card-detail-badge">@item.Group</span>
                     </div>
                     <div class="card-body text-center">
                         <div class="ad-title m-auto">
-                            <h5>@Html.DisplayFor(modelItem => item.Name)</h5>
+                            <h5>@item.Name</h5>
                         </div>
                         <a href="@Url.Action("ProductInfo", "Product", new { id = item.Id })" class="btn buy">KUP TERAZ</a>
                     </div>
