--- a/ShopFilip/Views/Product/_Products.cshtml
+++ b/ShopFilip/Views/Product/_Products.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="container">
+﻿@using ShopFilip.Helpers;
+<div class="container">
     <h1 style="text-align:center" id="title"></h1>
     <div class="form-group">
         <div class="searching-place">
