--- a/ShopFilip/Views/Admin/AllProducts.cshtml
+++ b/ShopFilip/Views/Admin/AllProducts.cshtml
@@ -30,9 +30,9 @@
                             @Html.DisplayFor(modelItem => item.Price)
                         </td>
                         <td>
-                            @foreach (var itema in item.ProductAtribute)
+                            @foreach (var itema in item.Sizes)
                             {
-                                <span>Rozmiar: @itema.Value</span>
+                                <span>Rozmiar: @itema.SizeOfPruduct.ToString()</span>
                                 <span>Ilość: @itema.Quantity</span><br />
                             }
                         </td>
